# valentines2_api

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  docker_compose.dev.yml
.devcontainer/: devcontainer.json
migrations/: 20241021104727_init.down.sql  20241021104727_init.up.sql
src/: endpoints.rs  main.rs
src/endpoints/: authentication.rs
src/models/: user.rs
