[package]
name = "mempaste-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = "1.40.0"
serde_json = "1.0.132"
serde = { version = "1.0.210",features = ["derive"] }
tracing-subscriber = { version = "0.3.18",features = ["env-filter","chrono"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
sha2 = "0.10.8"
tracing-appender = "0.2.3"
chrono = "0.4.38"
sqlx = { version = "0.8.2",features = ["chrono","runtime-tokio","postgres"] }
actix-web = "4.9.0"
validator = { version = "0.18", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "error"] }
thiserror = "1.0.64"
